home page basic styling

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,21 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anton&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Libre+Barcode+128+Text&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yoana Ivanova</title>
   </head>
   <body>
     <div id="app">
-      <section id="home">
-        <div class="navigation-bar">
-          <nav><img src="public/assets/logo.svg"></nav>
-          <ul>
-            <li>HOME</li>
-            <li>PROJECTS</li>
-            <li>ABOUT ME</li>
-          </ul>
-        </div>
 
+      <div class="navigation-bar">
+        <nav><img src="public/assets/logo.svg"></nav>
+        <ul>
+          <li>HOME</li>
+          <li>PROJECTS</li>
+          <li>ABOUT ME</li>
+        </ul>
+      </div>
+      
+      <section id="home">
         <div class="line-one">
           <nav class="paragraph"><p>An ICT & Media Design student at Fontys University of Applied Sciences, with one successful internship completed and currently working as a working student at Sogelink.</p></nav>
           <nav class="title"><h1>UX / UI</h1></nav>
