--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -43,11 +43,21 @@
       <section id="projects">
         <div class='container'>
           <div class='cards'>
-            <div class='card' style='top:40px'>1</div>
-            <div class='card' style='top:45px'>2</div>
-            <div class='card' style='top:50px'>3</div>
-            <div class='card' style='top:55px'>4</div>
-            <div class='card' style='top:60px'>5</div>
+            <div class='card' style='top:50px'>
+              <nav class="project-logo"><img src="public/assets/logo-pavemind.png" alt=""></nav>
+              <nav class="project-role"><p>UX/UI Designer / Front-end Developer</p></nav>
+              <nav class="project-information">
+                <h3 class="project-name">PaveMind</h3>
+                <p class="project-description">PaveMind is an <bg>educational website for students</bg> where they can not only help each other with <bg>burnout and mental health</bg>, but also find tips and tricks on how to cope with it, become more aware of the problem and learn new things about the topic.<br><br>This is a group project that was made for <bg>LiveWall</bg> as part of my studies. We created the prototype using <bg>Adobe XD</bg>. The website has feature - Articles, Tips & Tricks, Community, Diary, Test and Log In/ Sign up.<br><br>When compiling the application we used <bg>HTML5, CSS, Vanilla JavaScript</bg>. We used <bg>Node.js</bg> to create the back-end of our application and the connection between the client and the server is established via <bg>REST API</bg> made with <bg>Express</bg>. We created the database using <bg>MongoDB</bg>. To establish connection with the database server, we used the object oriented library Mongoose. We have merged this into main in our git repository. The backend is uploaded in Heroku and the fronend in Hera.</p>
+                <nav class="button-dark">button</nav>
+              </nav>
+            </div>
+
+            <div class='card' style='top:55px'>2</div>
+
+            <div class='card' style='top:60px'>3</div>
+
+            <div class='card' style='top:65px'>4</div>
           </div>
         </div>
       </section>
