--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -65,11 +65,37 @@
               </nav>
             </div>
 
-            <div class='card' style='top:55px'>2</div>
+            <div class='card' style='top:55px'>
+              <nav class="project-logo"><img src="public/assets/logo-maaike.png" alt=""></nav>
+              <nav class="project-role"><p>UX/UI Designer / Front-end Developer</p></nav>
+              <nav class="project-information">
+                <h3 class="project-name">Maaike Girardin</h3>
+                <p class="project-description">The website is a <bg>personal portfolio</bg> for a Dutch singer and music teacher from Tilburg.<br><br>This is a group project that was made for <bg>Maaike Girardin</bg> as part of my studies. We created the prototype using <bg>Adobe XD</bg>. The website is one pager showing her work and songs.<br><br>When compiling the application we used <bg>HTML5, CSS, Vanilla JavaScript</p>
+                <nav class="button-dark">
+                  <div class="border">
+                    <div class="background hover-trigger">
+                      <p>PROTOTYPE</p>
+                    </div>
+                  </div>
+                </nav>
+              </nav>
+            </div>
 
-            <div class='card' style='top:60px'>3</div>
-
-            <div class='card' style='top:65px'>4</div>
+            <div class='card' style='top:60px'>
+              <nav class="project-logo"><img src="public/assets/logo-geographix.png" alt=""></nav>
+              <nav class="project-role"><p>UX/UI Designer / Front-end Developer</p></nav>
+              <nav class="project-information">
+                <h3 class="project-name">GeoGraphix</h3>
+                <p class="project-description">GeoGraphix is a <bg>documentational website</bg> for the design system of Geodan (Sogelink Netherlands).<br><br>This is an individual project that was made for <bg>Geodan</bg> as part of my internship. I did a throughout research about miscommunication regarding the design system in the company. I created a high-fidelity prototype using <bg>Figma</bg>.<br><br>When compiling the application I used <bg>HTML5, CSS, Angular CLI and PrimeNG components</bg>. It was my first time using Angular CLI and also using premade component.I used this framework simply because the company is using it.</p>
+                <nav class="button-dark">
+                  <div class="border">
+                    <div class="background hover-trigger">
+                      <p>PROTOTYPE</p>
+                    </div>
+                  </div>
+                </nav>
+              </nav>
+            </div>
           </div>
         </div>
       </section>
@@ -77,7 +103,7 @@
       <section id="about"></section>
 
       <div class="cursor"></div>
-<div class="cursor2"></div>
+      <div class="cursor2"></div>
     </div>
   </body>
 </html>
