--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -14,7 +14,7 @@
     <div id="app">
 
       <div class="navigation-bar">
-        <nav><img src="public/assets/logo.svg"></nav>
+        <nav><img src="/assets/logo.svg"></nav>
         <ul>
           <li class="hover-trigger">HOME</li>
           <li class="hover-trigger">PROJECTS</li>
@@ -50,7 +50,7 @@
         <div class='container'>
           <div class='cards'>
             <div class='card' style='top:50px'>
-              <nav class="project-logo"><img src="public/assets/logo-pavemind.png" alt=""></nav>
+              <nav class="project-logo"><img src="/assets/logo-pavemind.png" alt=""></nav>
               <nav class="project-role"><p>UX/UI Designer / Front-end Developer</p></nav>
               <nav class="project-information">
                 <h3 class="project-name">PaveMind</h3>
@@ -66,7 +66,7 @@
             </div>
 
             <div class='card' style='top:55px'>
-              <nav class="project-logo"><img src="public/assets/logo-maaike.png" alt=""></nav>
+              <nav class="project-logo"><img src="/assets/logo-maaike.png" alt=""></nav>
               <nav class="project-role"><p>UX/UI Designer / Front-end Developer</p></nav>
               <nav class="project-information">
                 <h3 class="project-name">Maaike Girardin</h3>
@@ -82,12 +82,12 @@
             </div>
 
             <div class='card' style='top:60px'>
-              <nav class="project-logo"><img src="public/assets/logo-geographix.png" alt=""></nav>
+              <nav class="project-logo"><img src="/assets/logo-geographix.png" alt=""></nav>
               <nav class="project-role"><p>UX/UI Designer / Front-end Developer</p></nav>
               <nav class="project-information">
                 <h3 class="project-name">GeoGraphix</h3>
                 <p class="project-description">GeoGraphix is a <bg>documentational website</bg> for the design system of Geodan (Sogelink Netherlands).<br><br>This is an individual project that was made for <bg>Geodan</bg> as part of my internship. I did a throughout research about miscommunication regarding the design system in the company. I created a high-fidelity prototype using <bg>Figma</bg>.<br><br>When compiling the application I used <bg>HTML5, CSS, Angular CLI and PrimeNG components</bg>. It was my first time using Angular CLI and also using premade component.I used this framework simply because the company is using it.</p>
-                <nav class="button-dark">
+                <nav class="button button-dark">
                   <div class="border">
                     <div class="background hover-trigger">
                       <p>PROTOTYPE</p>
@@ -100,7 +100,28 @@
         </div>
       </section>
 
-      <section id="about"></section>
+      <section id="about">
+        <div class="about-heading">
+          <nav>
+            <h3>WHO AM I?</h3>
+            <nav>
+              <img src="/assets/photo-personal.png" alt="">
+            </nav>
+          </nav>
+        </div>
+        <div class="about-information">
+          <p class="about-text">I'm a <bg-b>passionate designer</bg-b> with a love for vibrant and innovative designs, especially when it comes to sneakers. Currently, I'm immersed in the world of <bg-b>ICT Media Design</bg-b>, specializing in UX/UI. My journey doesn't stop there – I'm also gaining experience as a <bg-b>working student UX/UI designer</bg-b> in the Netherlands.<br><br>My expertise extends to front-end development, where I use <bg-b>HTML5, CSS, and JavaScript</bg-b> (particularly Angular) to craft seamless user experiences. I thrive on challenges and approach each project with a blend of diligence and creativity. Whether it's brainstorming a new concept or refining an existing design, I'm always eager to push the boundaries and deliver solutions that captivate and delight users.<br><br> When I'm not busy crafting digital experiences, you can find me <bg-b>exploring the intersection of technology and art</bg-b>, seeking inspiration in the world around me. Feel free to explore my portfolio and get in touch – I'm always up for new collaborations and opportunities to bring exciting ideas to life.</p>
+          <nav class="button button-light">
+            <div class="border">
+              <div class="background hover-trigger">
+                <p>CONTACT VIA EMAIL</p>
+              </div>
+            </div>
+          </nav>
+        </div>
+      </section>
+
+      <footer>Footer</footer>
 
       <div class="cursor"></div>
       <div class="cursor2"></div>
