--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -121,7 +121,13 @@
         </div>
       </section>
 
-      <footer>Footer</footer>
+      <footer>
+        <div><h3>GET IN TOUCH</h3></div>
+        <div class="socials">
+          <nav class="hover-trigger"><img src="/assets/socials-linkedin.png"></nav>
+          <nav class="hover-trigger"><img src="/assets/socials-instagram.png"></nav>
+        </div>
+      </footer>
 
       <div class="cursor"></div>
       <div class="cursor2"></div>
