--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,16 +9,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yoana Ivanova</title>
     <script type="module" src="main.js"></script>
+    <script type="module" src="navigation.js"></script>
+    <script type="module" src="animations.js"></script>
   </head>
   <body>
     <div id="app">
 
       <div class="navigation-bar">
-        <nav><img src="/assets/logo.svg"></nav>
+        <nav><img id="nav-logo" src="/assets/logo.svg"></nav>
         <ul>
-          <li class="hover-trigger">HOME</li>
-          <li class="hover-trigger">PROJECTS</li>
-          <li class="hover-trigger">ABOUT ME</li>
+          <li class="hover-trigger nav-home">HOME</li>
+          <li class="hover-trigger nav-projects">PROJECTS</li>
+          <li class="hover-trigger nav-about">ABOUT ME</li>
         </ul>
       </div>
 
@@ -122,7 +124,7 @@
       </section>
 
       <footer>
-        <div><h3>GET IN TOUCH</h3></div>
+        <div class="socials-text"><h3>GET IN TOUCH</h3></div>
         <div class="socials">
           <nav class="hover-trigger"><img src="/assets/socials-linkedin.png"></nav>
           <nav class="hover-trigger"><img src="/assets/socials-instagram.png"></nav>
