fixed navigation bar animation

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -15,12 +15,12 @@
   <body>
     <div id="app">
 
-      <div class="navigation-bar">
+      <div class="navigation-bar" id="navbar">
         <nav><img id="nav-logo" src="/assets/logo.svg"></nav>
         <ul>
-          <li class="hover-trigger nav-home">HOME</li>
-          <li class="hover-trigger nav-projects">PROJECTS</li>
-          <li class="hover-trigger nav-about">ABOUT ME</li>
+          <li class="hover-trigger nav-home"><a href="#home">HOME</a></li>
+          <li class="hover-trigger nav-projects"><a href="#projects">PROJECTS</a></li>
+          <li class="hover-trigger nav-about"><a href="#about">ABOUT ME</a></li>
         </ul>
       </div>
 
