--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Libre+Barcode+128+Text&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yoana Ivanova</title>
+    <link rel="icon" type="image/x-icon" href="assets/logo.svg">
     <script type="module" src="main.js"></script>
     <script type="module" src="navigation.js"></script>
     <script type="module" src="animations.js"></script>
@@ -26,7 +27,7 @@
 
       <section id="home">
         <div class="line-one">
-          <nav class="paragraph"><p>An ICT & Media Design student at Fontys University of Applied Sciences, with one successful internship completed and currently working as a working student at Sogelink.</p></nav>
+          <nav class="paragraph"><p>A dedicated ICT & Media Design student at Fontys University of Applied Sciences with a completed UX/UI internship and ongoing work as a working student at the same company.</p></nav>
           <nav class="title"><h1>UX / UI</h1></nav>
           <nav class="label"><label>Yoana Ivanova</label></nav>
         </div>
@@ -41,7 +42,9 @@
           <nav class="button-dark">
             <div class="border">
               <div class="background hover-trigger">
+                <a href="#projects">
                 <p>PROJECTS</p>
+              </a>
               </div>
             </div>
           </nav>
@@ -56,11 +59,13 @@
               <nav class="project-role"><p>UX/UI Designer / Front-end Developer</p></nav>
               <nav class="project-information">
                 <h3 class="project-name">PaveMind</h3>
-                <p class="project-description">PaveMind is an <bg>educational website for students</bg> where they can not only help each other with <bg>burnout and mental health</bg>, but also find tips and tricks on how to cope with it, become more aware of the problem and learn new things about the topic.<br><br>This is a group project that was made for <bg>LiveWall</bg> as part of my studies. We created the prototype using <bg>Adobe XD</bg>. The website has feature - Articles, Tips & Tricks, Community, Diary, Test and Log In/ Sign up.<br><br>When compiling the application we used <bg>HTML5, CSS, Vanilla JavaScript</bg>. We used <bg>Node.js</bg> to create the back-end of our application and the connection between the client and the server is established via <bg>REST API</bg> made with <bg>Express</bg>. We created the database using <bg>MongoDB</bg>. To establish connection with the database server, we used the object oriented library Mongoose. We have merged this into main in our git repository. The backend is uploaded in Heroku and the fronend in Hera.</p>
+                <p class="project-description">PaveMind is an <bg>educational website for students</bg> where they can not only help each other with <bg>burnout and mental health</bg>, but also find tips and tricks on how to cope with it, become more aware of the problem and learn new things about the topic.<br><br>This is a group project that was made for <bg>LiveWall</bg> as part of my studies during my 2nd year. We created the prototype using <bg>Adobe XD</bg>. The website has feature - Articles, Tips & Tricks, Community, Diary, Test and Log In/ Sign up.<br><br>When compiling the application we used <bg>HTML5, CSS, Vanilla JavaScript</bg>. We used <bg>Node.js</bg> to create the back-end of our application and the connection between the client and the server is established via <bg>REST API</bg> made with <bg>Express</bg>. We created the database using <bg>MongoDB</bg>. To establish connection with the database server, we used the object oriented library Mongoose. We have merged this into main in our git repository. The backend is uploaded in Heroku and the fronend in Hera.</p>
                 <nav class="button-dark">
                   <div class="border">
                     <div class="background hover-trigger">
-                      <p>PROTOTYPE</p>
+                      <a href="https://burnout-website-wine.vercel.app/" target="_blank">
+                      <p>WEBSITE</p>
+                      </a>
                     </div>
                   </div>
                 </nav>
@@ -72,11 +77,13 @@
               <nav class="project-role"><p>UX/UI Designer / Front-end Developer</p></nav>
               <nav class="project-information">
                 <h3 class="project-name">Maaike Girardin</h3>
-                <p class="project-description">The website is a <bg>personal portfolio</bg> for a Dutch singer and music teacher from Tilburg.<br><br>This is a group project that was made for <bg>Maaike Girardin</bg> as part of my studies. We created the prototype using <bg>Adobe XD</bg>. The website is one pager showing her work and songs.<br><br>When compiling the application we used <bg>HTML5, CSS, Vanilla JavaScript</p>
+                <p class="project-description">The website is a <bg>personal portfolio</bg> for a Dutch singer and music teacher from Tilburg.<br><br>This is a group project that was made for <bg>Maaike Girardin</bg> as part of my studies during my 1st year. We created the prototype using <bg>Adobe XD</bg>. The website is one pager showing her work and songs.<br><br>When compiling the application we used <bg>HTML5, CSS, Vanilla JavaScript</p>
                 <nav class="button-dark">
                   <div class="border">
                     <div class="background hover-trigger">
-                      <p>PROTOTYPE</p>
+                      <a href="https://singer-website.vercel.app/" target="_blank">
+                      <p>WEBSITE</p>
+                      </a>
                     </div>
                   </div>
                 </nav>
@@ -88,14 +95,8 @@
               <nav class="project-role"><p>UX/UI Designer / Front-end Developer</p></nav>
               <nav class="project-information">
                 <h3 class="project-name">GeoGraphix</h3>
-                <p class="project-description">GeoGraphix is a <bg>documentational website</bg> for the design system of Geodan (Sogelink Netherlands).<br><br>This is an individual project that was made for <bg>Geodan</bg> as part of my internship. I did a throughout research about miscommunication regarding the design system in the company. I created a high-fidelity prototype using <bg>Figma</bg>.<br><br>When compiling the application I used <bg>HTML5, CSS, Angular CLI and PrimeNG components</bg>. It was my first time using Angular CLI and also using premade component.I used this framework simply because the company is using it.</p>
-                <nav class="button button-dark">
-                  <div class="border">
-                    <div class="background hover-trigger">
-                      <p>PROTOTYPE</p>
-                    </div>
-                  </div>
-                </nav>
+                <p class="project-description">GeoGraphix is a <bg>documentational website</bg> for the design system of Geodan (Sogelink Netherlands).<br><br>This is an individual project that was made for <bg>Geodan</bg> as part of my internship. I did a throughout research about miscommunication regarding the design system in the company. I created a high-fidelity prototype using <bg>Figma</bg>.<br><br>When compiling the application I used <bg>HTML5, CSS, Angular CLI and PrimeNG components</bg>. It was my first time using Angular CLI and also using premade component.</p>
+                
               </nav>
             </div>
           </div>
@@ -116,7 +117,9 @@
           <nav class="button button-light">
             <div class="border">
               <div class="background hover-trigger">
+                <a href="mailto:yoana.iv.iv02@gmail.com">
                 <p>CONTACT VIA EMAIL</p>
+              </a>
               </div>
             </div>
           </nav>
@@ -126,8 +129,8 @@
       <footer>
         <div class="socials-text"><h3>GET IN TOUCH</h3></div>
         <div class="socials">
-          <nav class="hover-trigger"><img src="/assets/socials-linkedin.png"></nav>
-          <nav class="hover-trigger"><img src="/assets/socials-instagram.png"></nav>
+          <a href="https://www.linkedin.com/in/yoana-ivanova-83b1a4220/" target="_blank"><nav class="hover-trigger"><img src="/assets/socials-linkedin.png"></nav></a>
+          <a href="https://www.instagram.com/yoana_iv/?igsh=bnZ4YW00Z3E4aHg%3D&utm_source=qr" target="_blank"><nav class="hover-trigger"><img src="/assets/socials-instagram.png"></nav></a>
         </div>
       </footer>
 
